Updating honeycomb design
Adding pictures and adding fonts to test responsiveness with different screen sizes. Need to format button soon.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type"text/css" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
     <ul id="hex-grid" class="clear">
       <li>
-        <div class="hexagon"></div>
+        <div class="hexagon">
+          <img src="http://www.alternateearths.com/Users/src/media/st1/images/7371216072015194609_56061556.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="image-2.jpg">
+        </div>
       </li>
       <li>
         <div class="hexagon"></div>
@@ -34,10 +45,15 @@
         <div class="hexagon"></div>
       </li>
       <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
+        <div class="container-fluid .col-xs-12 .col-sm-6 .col-md-8 text-center">
+        <div class="hexagon">
+          <p>Love these photos? Why not share them from your convention adventures?
+          <br>
+          <br>
+          Click the button below to find out more!</p>
+          <span class="bottom-aligned"><input class="btn btn-default center-block button-costume" type="submit" value="I want to know more"/></span>
+        </div>
+        </div>
       </li>
     </ul>
 </body>
