--- a/index.html
+++ b/index.html
@@ -17,44 +17,67 @@
       </li>
       <li>
         <div class="hexagon">
-          <img src="image-2.jpg">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/MCCC_15_-_Teenage_Mutant_Ninja_Turtles_%2817471903414%29.jpg">
         </div>
       </li>
       <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="hexagon"></div>
-      </li>
-      <li>
-        <div class="container-fluid .col-xs-12 .col-sm-6 .col-md-8 text-center">
         <div class="hexagon">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/WonderCon_2011_-_Jean_Grey_and_Cyclops_costumes_%285580816919%29.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <div class="hex-paragraph-1 text-center">
+            <p>Are you here because you read our awesome content above? These contests happen bi-monthly
+              and you can post any image from previous conventions or your personal projects.
+              Just remember they must be beyond <em>600x600</em> image format.
+            </p>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/bd/Dragon_Con_2013_-_Carrie_Kelley_Robin_%289687343339%29.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Montreal_Comiccon_2016_-_Harley_Quinn_and_the_Joker_%2827999703490%29.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/C2E2_2015_-_Madame_Hydra_%2817131668669%29.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="https://i.pinimg.com/736x/ae/56/8c/ae568cc55812fee47f745465a484943d--ivy-costume-cosplay-costume.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="https://images.fandango.com/ImageRenderer/0/0/redesign/static/img/default_poster.png/0/images/masterrepository/other/IMG_0029cc2013.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <img src="http://pm1.narvii.com/6334/c94ffe14cf7b79c77906e17f0dffada4febf53d2_hq.jpg">
+        </div>
+      </li>
+      <li>
+        <div class="hexagon">
+          <div class="hex-paragraph-2 text-center">
           <p>Love these photos? Why not share them from your convention adventures?
           <br>
           <br>
           Click the button below to find out more!</p>
-          <span class="bottom-aligned"><input class="btn btn-default center-block button-costume" type="submit" value="I want to know more"/></span>
+          <span class="bottom-aligned">
+            <input class="btn btn-default button-costume" type="submit" value="I want to know more"/>
+          </span>
         </div>
-        </div>
-      </li>
-    </ul>
+      </div>
+    </li>
+  </ul>
 </body>
 </html>
